--- a/chat/index.html
+++ b/chat/index.html
@@ -77,7 +77,9 @@
             overflow-y: auto; /* Rolagem para as mensagens */
             padding: 20px;
             display: flex;
-            flex-direction: column-reverse; /* Mensagens mais recentes embaixo */
+            flex-direction: column; /* ALTERADO: para as mensagens aparecerem em ordem ascendente (mais antigas em cima, mais novas embaixo) */
+             /* Se você quiser as mensagens mais recentes embaixo, com scroll para ver as mais antigas: */
+             /* flex-direction: column-reverse; */ /* Remova a linha acima e use esta */
         }
         .message-bubble {
             max-width: 70%;
@@ -156,7 +158,7 @@
             font-size: 18px;
         }
 
-        /* NOVO: Estilos para o Diálogo de Adicionar Contato */
+        /* Estilos para o Diálogo de Adicionar Contato */
         .add-contact-dialog {
             width: 400px;
         }
@@ -271,16 +273,11 @@
         const firestore = firebase.firestore();
         const analytics = firebase.analytics();
 
-        // --- Elementos da UI (do seu código original, mantidos para consistência) ---
+        // --- Elementos da UI ---
         const loginGoogleButton = document.getElementById('login-google');
         const loginGitHubButton = document.getElementById('login-github');
         const logoutButton = document.getElementById('logout-button');
-        const userInfo = document.getElementById('user-info'); // Não usado diretamente no chat, mas pode ser útil no cabeçalho.
         const adminPanelButton = document.getElementById('admin-panel-button');
-        const userProfilePic = document.getElementById('user-profile-pic'); // Pode ser útil no cabeçalho.
-        const googleAppsButton = document.getElementById('google-apps-button'); // Pode ser útil no cabeçalho.
-        const userInfoContainer = document.getElementById('user-info-container'); // Pode ser útil no cabeçalho.
-        const googleAppsPopup = document.getElementById('google-apps-popup'); // Pode ser útil no cabeçalho.
 
         // --- Elementos da UI do Chat ---
         const recentChatsList = document.getElementById('recent-chats-list');
@@ -289,7 +286,7 @@
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-button');
 
-        // NOVO: Elementos do Diálogo de Adicionar Contato
+        // Elementos do Diálogo de Adicionar Contato
         const addContactButton = document.getElementById('add-contact-button');
         const addContactDialog = document.getElementById('add-contact-dialog');
         const contactUidInput = document.getElementById('contact-uid-input');
@@ -305,7 +302,7 @@
         let unsubscribeMessages = null; // Variável para a função de desinscrição do listener de mensagens
         let foundContactUid = null; // UID do contato encontrado no diálogo
 
-        // --- Funções de Autenticação (adaptadas do seu código original) ---
+        // --- Funções de Autenticação ---
         const handleLogout = () => {
             auth.signOut().then(() => {
                 console.log("Usuário deslogado.");
@@ -337,7 +334,7 @@
 
         // --- Funções Firebase para o Chat ---
 
-        // 1. Criar um documento de perfil de usuário (mantido do seu código original)
+        // 1. Criar um documento de perfil de usuário
         async function createUserProfileDocument(user) {
             if (!user) return;
             const userRef = firestore.collection('users').doc(user.uid);
@@ -458,7 +455,7 @@
                 console.log("Mensagem enviada!");
                 messageInput.value = ''; // Limpa a caixa de texto
                 messageInput.style.height = 'auto'; // Reseta a altura do textarea
-                // Scroll para o final das mensagens (assumindo que são exibidas de baixo para cima)
+                // Rola para o final das mensagens (parte inferior)
                 messagesDisplay.scrollTop = messagesDisplay.scrollHeight;
 
             } catch (error) {
@@ -481,10 +478,15 @@
 
             const messagesRef = firestore.collection('wwebmodmail').doc(chatId).collection('messages');
 
-            unsubscribeMessages = messagesRef.orderBy('timestamp', 'desc').onSnapshot(snapshot => {
+            // USANDO orderBy('timestamp', 'asc') para mensagens mais antigas em cima, mais novas embaixo
+            // E flex-direction: column; no CSS para exibir corretamente.
+            unsubscribeMessages = messagesRef.orderBy('timestamp', 'asc').onSnapshot(snapshot => {
+                console.log("onSnapshot disparado! Nova atualização de mensagens."); // Log para depuração
                 messagesDisplay.innerHTML = ''; // Limpa para redesenhar
                 snapshot.forEach(doc => {
                     const message = doc.data();
+                    console.log("Mensagem recebida (onSnapshot):", message.text); // Log para depuração
+
                     const isSent = message.senderId === currentUser.uid;
                     const messageBubble = document.createElement('div');
                     messageBubble.classList.add('message-bubble');
@@ -497,10 +499,10 @@
                         <div class="message-meta">${isSent ? 'Você' : 'Contato'}, ${timeString}</div>`;
                     messagesDisplay.appendChild(messageBubble);
                 });
-                // Manter scroll no final (ou topo, dependendo da ordem)
+                // Rola para o final (última mensagem) após renderizar todas
                 messagesDisplay.scrollTop = messagesDisplay.scrollHeight;
             }, error => {
-                console.error("Erro ao carregar mensagens:", error);
+                console.error("Erro no listener de mensagens:", error);
                 messagesDisplay.innerHTML = `<p style="color: red;">Erro ao carregar mensagens: ${error.message}</p>`;
             });
         }
@@ -512,10 +514,9 @@
                 return;
             }
 
-            // Busca conversas onde o usuário atual é participante
             firestore.collection('wwebmodmail')
                 .where('participants', 'array-contains', currentUser.uid)
-                .orderBy('lastMessageTimestamp', 'desc') // Ordenar pelas mais recentes
+                .orderBy('lastMessageTimestamp', 'desc')
                 .onSnapshot(async snapshot => {
                     recentChatsList.innerHTML = ''; // Limpa a lista existente
                     for (const doc of snapshot.docs) {
@@ -526,7 +527,6 @@
                         let otherUserName = "Usuário Desconhecido";
                         let otherUserPic = "https://via.placeholder.com/40"; // Imagem padrão
 
-                        // Tenta buscar o nome e foto do outro participante
                         if (otherUserId) {
                             try {
                                 const otherUserDoc = await firestore.collection('users').doc(otherUserId).get();
@@ -542,7 +542,7 @@
                         const listItem = document.createElement('li');
                         listItem.classList.add('chat-list-item');
                         listItem.dataset.chatId = chatId;
-                        listItem.dataset.otherUserId = otherUserId; // Armazenar para uso posterior
+                        listItem.dataset.otherUserId = otherUserId;
                         listItem.innerHTML = `
                             <img src="${otherUserPic}" alt="${otherUserName} Avatar">
                             <div class="chat-list-item-info">
@@ -552,14 +552,11 @@
                         `;
                         recentChatsList.appendChild(listItem);
 
-                        // Adiciona evento de clique para selecionar o chat
                         listItem.addEventListener('click', () => {
-                            // Remover 'active' de todos os itens e adicionar ao clicado
                             document.querySelectorAll('.chat-list-item').forEach(item => item.classList.remove('active'));
                             listItem.classList.add('active');
 
                             currentChatId = chatId;
-                            // Atualizar cabeçalho do chat
                             chatHeader.innerHTML = `
                                 <img src="${otherUserPic}" alt="${otherUserName} Avatar">
                                 <h3>${otherUserName}</h3>
@@ -590,7 +587,7 @@
             messageInput.style.height = messageInput.scrollHeight + 'px';
         });
 
-        // NOVO: Lógica do Diálogo "Adicionar Contato"
+        // Lógica do Diálogo "Adicionar Contato"
         addContactButton.addEventListener('click', () => {
             if (!currentUser) {
                 alert("Por favor, faça login para adicionar contatos.");
@@ -653,15 +650,14 @@
                 const newChatId = await getOrCreateChat(foundContactUid);
                 if (newChatId) {
                     addContactDialog.close();
-                    // Opcional: Atualizar a lista de chats e selecionar o novo chat
-                    loadRecentChats();
-                    // Tenta encontrar o item na lista recém-carregada e clica nele
-                    setTimeout(() => { // Pequeno delay para garantir que a lista foi redesenhada
+                    loadRecentChats(); // Recarrega a lista para mostrar o novo chat
+                    // Pequeno delay para garantir que a lista foi redesenhada antes de tentar clicar
+                    setTimeout(() => {
                         const newItem = document.querySelector(`[data-chat-id="${newChatId}"]`);
                         if (newItem) {
-                            newItem.click();
+                            newItem.click(); // Simula o clique para abrir o chat recém-criado/encontrado
                         }
-                    }, 500); // Ajuste o tempo se necessário
+                    }, 300); // Ajuste o tempo se necessário
                 } else {
                     alert("Não foi possível iniciar o chat.");
                 }
@@ -669,62 +665,56 @@
         });
 
 
-        // --- Gerenciamento de Estado de Autenticação (adaptado do seu código original) ---
+        // --- Gerenciamento de Estado de Autenticação ---
         auth.onAuthStateChanged(async (user) => {
             if (user) {
                 currentUser = user;
                 console.log("Usuário logado:", user.uid);
 
-                // Atualizar UI de login/logout
                 loginGoogleButton.style.display = 'none';
                 loginGitHubButton.style.display = 'none';
                 logoutButton.style.display = 'inline-block';
-                // userInfo, userProfilePic, googleAppsButton, etc. podem ser atualizados aqui
+                // adminPanelButton.style.display será tratado por regras de admin, se houver.
 
-                await createUserProfileDocument(user); // Garante que o perfil do usuário exista no Firestore
+                await createUserProfileDocument(user);
 
-                // Lógica de chat só funciona para usuários logados
-                loadRecentChats(); // Carrega a lista de conversas
+                loadRecentChats();
                 loadMessages(null); // Limpa a tela de mensagens até um chat ser selecionado
                 
-                // Habilita elementos do chat
                 messageInput.disabled = false;
                 sendButton.disabled = false;
-                addContactButton.style.display = 'inline-block'; // NOVO: Mostra o botão adicionar contato
+                addContactButton.style.display = 'inline-block'; // Mostra o botão adicionar contato
 
             } else {
                 currentUser = null;
                 console.log("Usuário deslogado.");
 
-                // Atualizar UI de login/logout
                 loginGoogleButton.style.display = 'inline-block';
                 loginGitHubButton.style.display = 'inline-block';
                 logoutButton.style.display = 'none';
                 adminPanelButton.style.display = 'none';
-                // Limpar UI do chat
+
                 recentChatsList.innerHTML = '';
                 messagesDisplay.innerHTML = '<p style="text-align: center; color: #666;">Por favor, faça login para iniciar o chat.</p>';
                 chatHeader.innerHTML = '<h3>Selecione uma Conversa</h3>';
                 messageInput.value = '';
                 messageInput.disabled = true;
                 sendButton.disabled = true;
-                addContactButton.style.display = 'none'; // NOVO: Esconde o botão adicionar contato
+                addContactButton.style.display = 'none'; // Esconde o botão adicionar contato
+
                 if (unsubscribeMessages) {
                     unsubscribeMessages();
                 }
             }
-            // Chama o upgrade do MDL DOM após as manipulações
             if (componentHandler) {
                 componentHandler.upgradeDom();
             }
         });
 
-        // Inicializa o MDL após o DOM ser carregado
         document.addEventListener('DOMContentLoaded', () => {
             if (componentHandler) {
                 componentHandler.upgradeDom();
             }
-            // NOVO: Adiciona suporte para o diálogo do MDL
             if (! addContactDialog.showModal) {
                 dialogPolyfill.registerDialog(addContactDialog);
             }
